<resources>
    <string name="app_name">PRCO304</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_usingapp">Using this App</string>
    <string name="menu_sites">Sites A-Z</string>
    <string name="menu_planning">Planning your Visit</string>
    <string name="menu_split">App Settings</string>
    <string name="menu_share">Share App</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_admin">Admin Panel</string>
    <string name="menu_camera">AR Camera</string>
    <string name="title_activity_nearby_locations_fragment">Map</string>

    <string name="nearby_locations">See Nearby Locations</string>
    <string name="location_permission_denied">This app requires location permissions to allow it to see nearby locations to you. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'PRCO304\'.</string>
    <string name="permission_required_toast">Your location is needed to be able to use this app correctly!</string>
    <string name="permission_rationale_location">Access to your location is important when it comes to showing you nearby locations you can visit.</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="admin_login">Admin Panel</string>
    <string name="password_forget">Forgotten your password?</string>

    <string name="adminText">Please login below. If you do not have an Admin account you cannot login.</string>

    <string name="find_site_walk">Find a Site Walk</string>

    <string name="selfie_with_landmark">Take a Virtual Selfie with a Landmark</string>

    <string name="add_site">Add New Site</string>
    <string name="site_name">Site Name</string>
    <string name="site_desc">Site Description</string>
    <string name="site_lat">Latitude</string>
    <string name="site_long">Longitude</string>
    <string name="site_url">Site Website URL</string>

    <string name="using_this_app_title">How to use this App</string>
    <string name="gps_services">Location Services</string>
    <string name="gps_services_desc">This app uses GPS to determine your current location and helps
        locate nearby sites that are supported. To allow Location Services navigate to Settings and
        ensure the Location Permissions toggle is switched on (green). Location Services will be
    required to view your location on any maps that are implemented throughout the app. The Nearby
    Locations tab will order the sites from nearest to your current location as well.</string>

    <string name="camera_services">Camera</string>
    <string name="camera_services_desc">This app also uses your front and rear cameras. To allow
    camera permissions navigate to Settings and turn on the Camera Permissions toggle. The camera is
    used throughout the application to view 3D models and popups using Augmented Reality. You will
    not be able to see or use these features if it does not have access to the camera.</string>

    <string name="android_version">Android Version</string>
    <string name="android_version_desc">To ensure that the Augmented Reality features of the app
    work, you must be using an Android device that is running Android Version 7.0 or higher. This
    can also be referred to as Android Nougat. To check if you are running the required software
    version, navigate to the Settings app on your phone. Click on System >> About and then look for
    "Android version". It should display a number. If it is 7 or above then your phone can support
    Augmented Reality.</string>

    <string name="phone_supported">AR Core Supported Phones</string>
    <string name="phone_supported_desc">To ensure your phone supports AR Core (for Augmented
    Reality), please check the following list for your phone >>
    https://developers.google.com/ar/discover/supported-devices. The app should recognise and inform
    you automatically if your phone is not supported, but just in-case you want to check manually
    you may do so here.</string>

    <string name="app_updates">App Updates</string>
    <string name="app_updates_desc">When an update is available for this app the content will be
    downloaded when the device has an active internet connection. To ensure you have the latest
    content available, try to connect your device to the internet when you plan to use it.</string>
</resources>
