<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_usingapp"
            android:title="@string/menu_usingapp" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_planning"
            android:title="@string/menu_planning" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_sites"
            android:title="@string/menu_sites" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/admin_login" />
    </group>
</menu>
