<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prco.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.prco.ui.usingapp.UsingAppFragment"
        android:label="@string/menu_usingapp"
        tools:layout="@layout/fragment_usingapp" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.prco.ui.planning.PlanningFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.prco.ui.sites.SitesFragment"
        android:label="@string/menu_sites"
        tools:layout="@layout/fragment_sites" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.prco.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.prco.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

    <activity
        android:id="@+id/nav_arcamera"
        android:name="com.example.prco.ui.arcamera.ArCamera"
        android:label="activity_arcamera"
        tools:layout="@layout/activity_arcamera" />
</navigation>