<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <Button
        android:id="@+id/btnNearby"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/nearby_locations"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/nearby_locations"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiteWalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btnSiteWalk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/find_site_walk"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/find_site_walk"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSelfieLandmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNearby" />

    <Button
        android:id="@+id/btnSelfieLandmark"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/landmark_selfie"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/selfie_with_landmark"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiteWalk" />

</androidx.constraintlayout.widget.ConstraintLayout>